# gmail-assistant-mcp

./: .gitignore  README.md  pyproject.toml
src/gmail_assistant/: gmail_client.py  google_docs_helper.py  server.py
src/gmail_assistant/helpers/: prompt_builder.py
src/gmail_assistant/tools/: create_draft_reply.py  get_unread_and_draft_replies.py  get_unread_emails.py
